# ets2_telemetry_mqtt

./: .gitignore  CMakeLists.txt  README.md  ci_build.sh  docker_build_clang.sh  local_build.bat  local_build.sh  pipeline.yml  publish_docker_tools.sh
CMakeModules/: FindMosquitto.cmake
build-tools/: Dockerfile
bump_git/: Dockerfile
src/: ets2client.cxx  ets2telemery.def  hello_ets2.cpp  hello_ets2.def  mqttClient.cpp  mqttClient.cxx  mqttClient.hpp  scslog.hpp  simulation_timestamp.cpp  simulation_timestamp.hpp  telematic.hpp  telemetry_state.cpp  telemetry_state.hpp
tasks/: ci_build.sh  ci_doc.sh  ci_unittest.sh  cmake-build.yml  cmake-doc.yml  cmake-linux.yml  cmake-unittest.yml  make_version.sh  make_version.yml
test/: ets2clienttest.cxx  gmock_catch_interceptor.hpp  main.cpp
